--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,4 +28,60 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+  
+  deploy-dev:
+
+    runs-on: ubuntu-latest
+    environment:
+      name: dev
+      url: 'http://127.0.0.1:8080'
+    needs: build
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.10"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        
+  deploy-staging:
+
+    runs-on: ubuntu-latest
+    environment:
+      name: staging
+      url: 'http://127.0.0.1:8080'
+    needs: deploy-dev
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.10"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        
+  deploy-production:
+
+    runs-on: ubuntu-latest
+    environment:
+      name: production
+      url: 'http://127.0.0.1:8080'
+    needs: deploy-staging
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.10"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
